<resources>
    <string name="app_name">Clothes Hunter</string>

    <string name="next_button_text">Next</string>
    <string name="back_button_text">Back</string>
    <string name="register_button_text">Sign Up</string>
    <string name="switch_login_text">Already have an account? Log in.</string>
    <string name="switch_register_text">Don\'t have an account? Sign up.</string>
    <string name="login_button_text">Login</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_search" translatable="false">Search</string>
    <string name="menu_profile" translatable="false">Profile</string>
    <string name="menu_follow" translatable="false">Follow</string>

    <string name="hint_role_menu" translatable="false">Your role</string>
    <string name="hint_gender_menu" translatable="false">Your gender</string>

    <string-array name="roles">
        <item name="role_menu_user" translatable="false">User</item>
        <item name="role_menu_merchant" translatable="false">Merchant</item>
    </string-array>

    <string-array name="genders">
        <item name="gender_menu_male" translatable="false">Male</item>
        <item name="gender_menu_female" translatable="false">Female</item>
    </string-array>

    <string name="search" translatable="false">Search</string>
    <string name="user" translatable="false">User</string>
    <string name="favorite" translatable="false">Favorite</string>
    <string name="filter" translatable="false">Filters</string>
    <string name="map" translatable="false">Map</string>
    <string name="mapSearch" translatable="false">Map Search</string>
    <string name="shops" translatable="false">Shops</string>
    <string name="products" translatable="false">Products</string>
    <string name="filterDismiss" translatable="false">Filter Dismiss</string>
    <string name="keyword" translatable="false">Keyword</string>
    <string name="region" translatable="false">Region</string>
    <string name="district" translatable="false">District</string>
    <string name="category" translatable="false">Category</string>
    <string name="style" translatable="false">Style</string>
    <string name="priceRange_label" translatable="false">Price Range: </string>
    <string name="min" translatable="false">Min</string>
    <string name="max" translatable="false">Max</string>
    <string name="sortBy" translatable="false">Sort By</string>
    <string name="title_activity_map_searching" translatable="false">Map</string>
    <string name="district1" translatable="false">Islands</string>
    <string name="district2" translatable="false">Kwai Tsing</string>
    <string name="district3" translatable="false">North</string>
    <string name="district4" translatable="false">Sai Kung</string>
    <string name="district5" translatable="false">Sha Tin</string>
    <string name="district6" translatable="false">Tai Po</string>
    <string name="district7" translatable="false">Tsuen Wan</string>
    <string name="district8" translatable="false">Tuen Mun</string>
    <string name="district9" translatable="false">Yuen Long</string>
    <string name="district10" translatable="false">Kowloon City</string>
    <string name="district11" translatable="false">Kwun Tong</string>
    <string name="district12" translatable="false">Sham Shui Po</string>
    <string name="district13" translatable="false">Wong Tai Sin</string>
    <string name="district14" translatable="false">Yau Tsim Mong</string>
    <string name="district15" translatable="false">Central and Western</string>
    <string name="district16" translatable="false">Eastern</string>
    <string name="district17" translatable="false">Southern</string>
    <string name="district18" translatable="false">Wan Chai</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="search_discover_tab" translatable="false">Discover</string>
    <string name="search_user_tab" translatable="false">Users</string>
    <string name="profile_edit_button_text">Edit Profile</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_username" translatable="false">Username</string>
    <string name="hint_first_name" translatable="false">First Name</string>
    <string name="hint_last_name" translatable="false">Last Name</string>
    <string name="hint_shop_name" translatable="false">Shop Name</string>
    <string name="hint_phone" translatable="false">Phone Number</string>
    <string name="edit_profile_button_text" translatable="false">Apply</string>
    <string name="search_user_follow_button_text">Follow</string>
    <string name="search_user_following_button_text">Following</string>
    <string name="menu_recommendation">Recommendation</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_username">temp_Username</string>
    <string name="menu_shopnearby">Search</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_manageproduct">Manage Product</string>

</resources>
