<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/district1"
        android:title="@string/district1" />
    <item android:id="@+id/district2"
        android:title="@string/district2" />
    <item android:id="@+id/district3"
        android:title="@string/district3" />
    <item android:id="@+id/district4"
        android:title="@string/district4" />
    <item android:id="@+id/district5"
        android:title="@string/district5" />
    <item android:id="@+id/district6"
        android:title="@string/district6" />
    <item android:id="@+id/district7"
        android:title="@string/district7" />
    <item android:id="@+id/district8"
        android:title="@string/district8" />
    <item android:id="@+id/district9"
        android:title="@string/district9" />
    <item android:id="@+id/district10"
        android:title="@string/district10" />
    <item android:id="@+id/district11"
        android:title="@string/district11" />
    <item android:id="@+id/district12"
        android:title="@string/district12" />
    <item android:id="@+id/district13"
        android:title="@string/district13" />
    <item android:id="@+id/district14"
        android:title="@string/district14" />
    <item android:id="@+id/district15"
        android:title="@string/district15" />
    <item android:id="@+id/district16"
        android:title="@string/district16" />
    <item android:id="@+id/district17"
        android:title="@string/district17" />
    <item android:id="@+id/district18"
        android:title="@string/district18" />
</menu>