<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".search.SearchFilterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/filterAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/filter" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="?attr/actionBarSize"
            android:isScrollContainer="true"
            android:nestedScrollingEnabled="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/keyword_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:hint="@string/keyword"
                app:startIconDrawable="@drawable/ic_baseline_input_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/keyword_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- For shops tab -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/district_selection"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:hint="@string/district"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24">

                <AutoCompleteTextView
                    android:id="@+id/district_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- For products tab -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_selection"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:hint="@string/category"
                app:startIconDrawable="@drawable/ic_baseline_category_24">

                <AutoCompleteTextView
                    android:id="@+id/category_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/style_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:hint="@string/style"
                app:startIconDrawable="@drawable/ic_baseline_style_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/style_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/priceRange_label"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="0dp"
                android:hint="@string/priceRange_label"/>

            <GridLayout
                android:id="@+id/priceRange_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/priceRange_min"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="0dp"
                    android:hint="@string/min"
                    app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/priceRange_min_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType = "number"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/priceRange_max"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="0dp"
                    android:hint="@string/max"
                    app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/priceRange_max_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType = "number"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </GridLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sort_selection"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:hint="@string/sortBy"
                app:startIconDrawable="@drawable/ic_baseline_sort_24">

                <AutoCompleteTextView
                    android:id="@+id/sort_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- For both tabs -->

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:text="@string/search"
                app:icon="@drawable/ic_baseline_search_24"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>